Update README.md
Instructions on how to find the branch which holds the application .jar file